--- a/taobao/taobao.html
+++ b/taobao/taobao.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="main.css">
+    <meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="taobao.css">
+	<title>淘宝网</title>
 </head>
 <body>
-   <div class="header">
-   	<div class="nav">我的淘宝</div>
-   	<div class="about">个人信息</div>
-   </div>
+	
+     <div class="top">
+      <div class="center">
+        <ul class="navf">
+    		<li><a href="#">亲，请登录</a></li>
+    		<li><a href="#">免费注册</a></li>
+    		<li><a href="#">手机逛淘宝</a></li>
+    	</ul>
+    	<ul class="nave">
+    		<li class="navb"><a href="#">我的淘宝</a>
+          <ul class="nava">
+    		<li class="navc"><a href="#">已买到的宝贝</a></li>
+    		<li><a href="#">我的足迹&nbsp&nbsp</a></li>
+    	  </ul>
+    		</li>
+    		<li class="navs"><a href="#">购物车</a></li>
+    		<li><a href="#">收藏夹</a></li>
+    		<li class="navt"><a href="#">商品分类</a></li>
+    		<li><a href="#">卖家中心</a></li>
+    		<li><a href="#">联系客服</a></li>
+    		<li><a href="#">网站导航</a></li>
+    	</ul>
+    	
+      </div>
+     </div>	
 </body>
-</html>
+</html>	
